<resources>

    <!-- String Display Text -->

    <!-- Main Display Text -->
    <string name="app_name">MHS Historical Sites</string>
    <string name="title_activity_maps">MHS Manitoba Historical Sites</string>

    <!-- Legend -->
    <string name="legend_title_show">Click Here to Show Legend</string>
    <string name="legend_title_hide">Click Here to Hide Legend</string>


    <!-- Historic Site Details Display Text -->
    <string name="show_more">Click here to show more info</string>
    <string name="show_less">Click here to show less info</string>
    <string name="sources_title">Sources:</string>
    <string name="historical_society"><u>Click here to go to the Manitoba Historical Society webpage for this site!</u></string>
    <string name="no_photo_text">We have no photos for this site.\nIf you have one in your personal collection and can provide a copy,\nplease contact us at photos@mhs.mb.ca</string>

    <!-- Filter Display Text -->
    <string name="back_click">Back</string>
    <string name="municipalities_filter_title">Filter by Municipality</string>
    <string name="site_types_filter_title">Filter by Type</string>
    <string name="multi_select_municipalities">Select Municipalities</string>
    <string name="multi_select_types">Select Site Types</string>
    <string name="confirm_new_filters">Confirm new Filters</string>

    <!-- Search Display Text -->
    <string name="search_by_label">Search By:</string>
    <string name="search_text">Search Manitoba Historical Sites ...</string>
    <string name="active_type_filters">Active Type Filters:</string>
    <string name="active_municipality_filters">Active Municipality Filters:</string>

    <!-- About Display Text -->
    <string name="about_title">About</string>
    <string name="about_text">Welcome to my app! History has always been a passion of mine, and I quite excited to combine it with my love of coding.
        \n\nI started working on this app in October 2022, displaying all Historical Sites according to the <a href="https://data.winnipeg.ca/City-Planning/Historical-Resources/ptpx-kgiu">City of Winnipeg Open Data</a>. With the data from the City of Winnipeg, I was able to display around 720 sites. While I was excited by what I was able to accomplish, the Winnipeg data was limited in what it could display. I knew that I could do more.
        \n\nAlmost a year after starting this project, I was successful in collecting 99% of the data from the <a href="https://www.mhs.mb.ca">Manitoba Historical Society</a>, and now this app displays over 9360 historical all across Manitoba!
        \n\nThank you Manitoba Historical Society for providing all the information about this history of this province.
        \n\nCreated by me, Kyle Tichon.
    </string>


    <!-- Variable values -->

    <!--  Values for the map to details ratio when displayMode = DisplayMode.SiteAndMap,  -->
    <string name="display_both_map">3</string>
    <string name="display_both_details">1</string>

    <!-- Used to pop all site details from fragment manager (important when using filter) -->
    <string name="site_fragment">Site Details</string>


    <!--Preference Keys -->
    <string name="night_mode_key">Night_Mode_Key</string>
    <string name="background_colour_key">background_colour_key</string>
    <string name="secondary_colour_key">secondary_colour_key</string>
    <string name="text_colour_key">text_colour_key</string>
    <string name="update_marker_key">update_marker_key</string>
    <string name="min_cluster_key">min_cluster_key</string>
    <string name="cluster_animation_key">cluster_animation_key</string>
    <string name="map_weight_key">map_weight_key</string>
    <string name="details_weight_key">details_weight_key</string>


    <!-- Default maker colour (red) -->
    <string name="Default_Colour_Value">
        <item>0.0</item>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>