<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HistoricalSiteDetailsFragment"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llFilterContainer"
    android:paddingTop="10dp" >
    <TextView
        android:id="@+id/tvFilterGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/back_click"
        style="@style/mainText"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:drawableStartCompat="@drawable/back" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llFilterMunicipality"
        android:orientation="vertical"
        android:background="@drawable/rounded_border"
        android:layout_margin="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMunicipalityFilterTitle"
            android:text="@string/municipalities_filter_title"
            style="@style/mainText"
            android:layout_margin="5dp"
            android:paddingHorizontal="10dp"
            android:paddingTop="5dp"

            />




        <TextView
            android:id="@+id/tvMultiSelectMunicipality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:drawablePadding="15dp"
            android:hint="@string/multi_select_municipalities"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:drawableEndCompat="@android:drawable/arrow_down_float" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llFilterTypes"
        android:orientation="vertical"
        android:background="@drawable/rounded_border"
        android:layout_margin="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSiteFilterTitle"
            android:text="@string/site_types_filter_title"
            style="@style/mainText"
            android:layout_margin="5dp"
            android:paddingHorizontal="10dp"
            android:paddingTop="5dp"

            />




        <TextView
            android:id="@+id/tvMultiSelectType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:drawablePadding="15dp"
            android:hint="@string/multi_select_types"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_margin="5dp"
            android:padding="10dp"
            app:drawableEndCompat="@android:drawable/arrow_down_float" />

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_filters"

        android:layout_margin="10dp"
        android:drawableEnd="@drawable/check"
        style="@style/mainText"/>


</LinearLayout>