<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HistoricalSiteDetailsFragment"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llAboutContainer"
    android:padding="10dp" >
    <TextView
        android:id="@+id/tvAboutGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/back_click"
        style="@style/mainText"
        android:layout_margin="5dp"
        app:drawableStartCompat="@drawable/back" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:layout_margin="5dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llAbout"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/titleText"
                android:text="@string/about_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/mainText"
                android:text="@string/about_text"
                android:autoLink="web"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</LinearLayout>